<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FastTrack</string>
    <string name="hello_world">LogIn</string>
    <string name="action_settings">Settings</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="person">Personal</string>
    <string name="sign_on_text">Sign On</string>
    <string name="title_activity_track_speed">TrackSpeed</string>
    <string name="speed_icon_text">Speed</string>
    <string name="your_speed_text">Your Speed</string>
    <string name="default_speed">....... km/hr</string>
    <string name="start_btn_text">Start</string>
    <string name="notify_text">idle</string>
    <string name="title_activity_home_speed">HomeSpeed</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="notify_img">Notify Image</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>

    <string-array name="list_menu">
        <item>My Speed</item>
        <item>My Profile</item>
        <item>Log Out</item>
        <item>Exit</item>
    </string-array>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="trend_icon_text">Trend</string>

</resources>
