<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kmutnb.fasttrack.SpeedFragment"
    android:id="@+id/track_speed" >

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/speed_icon_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/speed_icon_text"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/meter_128px" />

    <ImageView
        android:id="@+id/notify_status_img"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@+id/speed_track_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:src="@drawable/car" 
        android:contentDescription="@string/notify_img"/>

    <TextView
        android:id="@+id/notify_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notify_status_img"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/notify_text"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/holo_blue_light" />

    <Button
        android:id="@+id/speed_track_btn"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="49dp"
        android:minHeight="80dp"
        android:text="@string/start_btn_text"
        android:background="@drawable/blue_button"
        android:textColor="@android:color/white"
         />

    <TextView
        android:id="@+id/your_speed_track_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:text="@string/your_speed_text"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/speed_track_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/speed_track_btn"
        android:layout_below="@+id/your_speed_track_text"
        android:text="@string/default_speed"
        android:textAppearance="?android:attr/textAppearanceLarge" />

</RelativeLayout>
